--- a/app/src/main/res/layout/activity_map_view.xml
+++ b/app/src/main/res/layout/activity_map_view.xml
@@ -3,8 +3,43 @@
     xmlns:map="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
     android:layout_height="match_parent" android:id="@+id/map"
     tools:context="com.example.kishan.stratmap.MapView"
-    android:name="com.google.android.gms.maps.SupportMapFragment"
+    android:name="com.google.android.gms.maps.SupportMapFragment">
 
 
+<Button
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="right|top"
+    android:text="Potholes"
+    android:padding="10dp"
+    android:layout_marginTop="50dp"
+    android:paddingRight="10dp"
+    android:onClick="PotholesPress"
 
     />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right|top"
+        android:text="Traffic"
+        android:padding="10dp"
+        android:layout_marginTop="100dp"
+        android:paddingRight="10dp"
+        android:onClick="TrafficPress"
+
+        />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right|top"
+        android:text="Debris"
+        android:padding="10dp"
+        android:layout_marginTop="150dp"
+        android:paddingRight="10dp"
+        android:onClick="DebrisPress"
+
+        />
+
+
+</fragment>
