--- a/app/src/main/res/layout/content_key.xml
+++ b/app/src/main/res/layout/content_key.xml
@@ -7,6 +7,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:showIn="@layout/activity_key"
+    android:background= "@color/maize"
     tools:context="com.example.kishan.stratmap.KeyActivity">
 
     <TextView
@@ -14,11 +15,11 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="28dp"
-        android:text="1"
+        android:text="Green-Debris"
         android:id="@+id/textView2"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="25dp"
+        android:layout_marginBottom="45dp"
         android:layout_marginTop="107dp" />
 
     <TextView
@@ -26,18 +27,20 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="28dp"
-        android:text="2"
+        android:text="Red-Potholes"
         android:id="@+id/textView3"
         android:layout_below="@+id/textView2"
+        android:layout_marginTop="25dp"
         android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="3"
+        android:textSize="28dp"
+        android:text="Blue-Traffic"
         android:id="@+id/textView4"
         android:layout_below="@+id/textView3"
         android:layout_alignEnd="@+id/textView3"
-        android:layout_marginTop="45dp" />
+        android:layout_marginTop="65dp" />
 </RelativeLayout>
