--- a/app/src/main/res/layout/content_main_menu.xml
+++ b/app/src/main/res/layout/content_main_menu.xml
@@ -7,6 +7,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    android:background="@color/maize"
 
     tools:showIn="@layout/activity_main_menu" tools:context=".MainMenu">
 
@@ -59,6 +60,8 @@
         android:onClick="displayInfo"
         android:layout_marginBottom="25dp"
         android:layout_alignStart="@+id/button2" />
+
+
 
 
 </RelativeLayout>
