--- a/app/src/main/res/layout/content_potholes.xml
+++ b/app/src/main/res/layout/content_potholes.xml
@@ -7,27 +7,27 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_about_page"
-    android:background="@color/maize"
-    tools:context="com.example.kishan.stratmap.AboutPage">
+    tools:showIn="@layout/activity_potholes"
+    tools:context="com.example.kishan.stratmap.PotholesActivity">
 
-    <ImageView
-        android:layout_width="160dp"
-        android:layout_height="100dp"
-        android:id="@+id/imageView"
-        android:layout_marginBottom="55dp"
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="OK"
+        android:onClick="mapView"
+        android:id="@+id/button4"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="217dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/editText"
-        android:textSize="24dp"
-        android:text="@string/AboutTheApp"
-        android:gravity="center_horizontal"
+        android:text="New Text"
+        android:id="@+id/textView5"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="42dp" />
 
 
 </RelativeLayout>
